
Format:
* validation
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does Windows hide the last 4096 bytes of the volume?

Test images:
* for Windows Vista, Windows 7, To Go, Windows 8

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* clear key
* partial encrypted volume
* startup key

20130422
* updated dependencies
* updated pybde
* fix in dpkg files for python binding

20130412
* updated README files
* updated dependencies
* added tests directory

20130331
* updated dependencies
* code clean up
* pybde update

20130310
* updated dependencies
* added Package Maker files

20130113
* 2013 update
* update dependencies
* updated msvscpp files
* updated pybde

20121123
* pybde: code clean up

20121110
* worked on Python-bindings (pybde)

20121109
* worked on set keys

20121108
* updated dependencies
* worked on set keys

20120915
* added -X option to bdemount to pass sub system options
* updated bdemount man page

20120912
* updated dependecies
* changes for libcdata update

20120807
* updated dependecies

20120721
* added libcsplit
* updated dependecies
* updated msvscpp files
* switched library order in tools
* fixed issue in spec file

20120520
* libfdata update
* code clean up in bdetools

20120518
* updates for Windows 8 BDE volume

20120511
* fixes for dpkg files

20120510
* small changes
* worked on msvscpp files

20120509
* updated dependecies
* added bdemount destroy function
* remove + 1 from volume size calculation, does not add up for
  volume-only storage media

20120310
* updated libnotify, libsystem

20120225
* fix for libfuse in spec file

20120208
* fix in dpkg/rules for include files

20120116
* 2012 update

20111218
* updated libcstring, libsystem, libfdata, libfvalue
* added libfcache

20111124
* updated libfdata

20111118
* code clean up

20111117
* code clean up