@@ -67,7 +67,7 @@ PyMethodDef pybde_volume_object_methods[] = {
 	{ "open_file_object",
 	  (PyCFunction) pybde_volume_open_file_object,
 	  METH_VARARGS | METH_KEYWORDS,
-	  "open(file_object, mode='r') -> None\n"
+	  "open_file_object(file_object, mode='r') -> None\n"
 	  "\n"
 	  "Opens a volume using a file-like object." },
 
